<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ActiveQuestion">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/choicea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="RadioButton"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choiceb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="RadioButton"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choicec"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="RadioButton"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choiced"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="RadioButton"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/aQuestion"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryText" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="137dp"
        android:layout_height="64dp"
        android:text="@string/q_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numCount"
        android:layout_width="137dp"
        android:layout_height="64dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="137dp"
        android:layout_height="64dp"
        android:text="@string/of_count"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numCount"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aQuestion" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="406dp"
        android:layout_height="65dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numCount" />
</androidx.constraintlayout.widget.ConstraintLayout>