<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CategoriesModeFragment">

    <TextView
        android:id="@+id/categoryModeText"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:text="@string/make_sel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="260dp"
        android:layout_height="450dp"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryModeText">

        <Button
            android:id="@+id/geobutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/geo" />

        <Button
            android:id="@+id/tvbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/tv" />

        <Button
            android:id="@+id/hobbiesbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/hobby" />

        <Button
            android:id="@+id/sportsbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/sport" />

        <Button
            android:id="@+id/randomcatbutton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/rand_mode" />
    </LinearLayout>

    <Button
        android:id="@+id/gbbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>