<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameConfigFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/game_name"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="410dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:text="@string/gm_option_ask"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/wwmbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/to_be_millionaire"
            android:textSize="16sp" />

        <Button
            android:id="@+id/categoriesbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/categories"
            android:textSize="20sp" />

        <Button
            android:id="@+id/trivpursuitbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/trivpursuit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/randbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/rand_mode"
            android:textSize="20sp" />

        <Button
            android:id="@+id/statsbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/stats"
            android:textSize="20sp" />

        <Button
            android:id="@+id/moreinfobutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/more_info"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>