<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameWonFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/congratsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/g_won"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="64dp"
        android:text="@string/play_again"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/congratsText"
        tools:layout_editor_absoluteX="176dp" />

    <Button
        android:id="@+id/yeswonbutton"
        android:layout_width="123dp"
        android:layout_height="82dp"
        android:layout_marginTop="64dp"
        android:text="@string/yes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/menuwonbutton"
        android:layout_width="123dp"
        android:layout_height="82dp"
        android:layout_marginTop="64dp"
        android:text="@string/menu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yeswonbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>